--- a/customer-mgmt-bvs/src/main/resources/application.properties
+++ b/customer-mgmt-bvs/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.port=9090
+server.servlet.context-path=/customer-mgmt
+spring.datasource.url=jdbc:mysql://localhost:3306/customer_mgmt_bvs
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
